--- a/P02-VehiclesAPI/pricing-service/pom.xml
+++ b/P02-VehiclesAPI/pricing-service/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -46,71 +46,126 @@
 
 
 							<!--	Added Dependencies	-->
+		<!-- Added Dependencies -->
+
 		<dependency>
+
 			<groupId>org.springframework.boot</groupId>
+
 			<artifactId>spring-boot-starter-data-rest</artifactId>
+
 		</dependency>
 
 		<dependency>
+
 			<groupId>org.springframework.boot</groupId>
+
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+
 		</dependency>
+
+		<!--<dependency>
+
+        <groupId>org.springframework.cloud</groupId>
+
+        <artifactId>spring-cloud-starter-config</artifactId>
+
+        </dependency>-->
+
 		<dependency>
+
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
+
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+
 		</dependency>
 
 		<dependency>
+
 			<groupId>com.h2database</groupId>
+
 			<artifactId>h2</artifactId>
+
 			<scope>runtime</scope>
+
 		</dependency>
+
 		<dependency>
+
 			<groupId>jakarta.xml.bind</groupId>
+
 			<artifactId>jakarta.xml.bind-api</artifactId>
+
 			<version>2.3.2</version>
+
 		</dependency>
+
 		<dependency>
+
 			<groupId>org.glassfish.jaxb</groupId>
+
 			<artifactId>jaxb-runtime</artifactId>
+
 			<version>2.3.2</version>
+
 		</dependency>
+
 		<dependency>
+
 			<groupId>com.thoughtworks.xstream</groupId>
+
 			<artifactId>xstream</artifactId>
+
 			<version>1.4.13</version>
+
 		</dependency>
+
 		<dependency>
+
 			<groupId>javax.xml.bind</groupId>
+
 			<artifactId>jaxb-api</artifactId>
+
 			<version>2.4.0-b180725.0427</version>
+
 		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
+
 		<dependencies>
+
 			<dependency>
+
 				<groupId>org.springframework.cloud</groupId>
+
 				<artifactId>spring-cloud-dependencies</artifactId>
+
 				<version>${spring-cloud.version}</version>
+
 				<type>pom</type>
+
 				<scope>import</scope>
+
 			</dependency>
+
 		</dependencies>
+
 	</dependencyManagement>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${project.parent.version}</version>
-			</plugin>
-		</plugins>
-	</build>
 
+		<plugins>
+
+			<plugin>
+
+				<groupId>org.springframework.boot</groupId>
+
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+		</plugins>
+
+	</build>
 </project>
