client server updated

--- a/P02-VehiclesAPI/EurekaServer/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/EurekaServer/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=eureka-server 
 server.port=8761
+spring.security.user.name=username
+spring.security.user.password=password
+eureka.client.service-url.defaultZone=http://username:password@localhost:8761/eureka
 
 #don't register itself as a client
 eureka.client.register-with-eureka=false
