--- a/P02-VehiclesAPI/pricing-service/pom.xml
+++ b/P02-VehiclesAPI/pricing-service/pom.xml
@@ -46,7 +46,6 @@
 
 
 							<!--	Added Dependencies	-->
-		<!-- Added Dependencies -->
 
 		<dependency>
 
@@ -128,6 +127,11 @@
 
 			<version>2.4.0-b180725.0427</version>
 
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
