--- a/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.application.name=pricing-service
 server.port=8762
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=localhost
 
-spring.cloud.config.enabled=false
+eureka.client.register-with-eureka=true
+
+eureka.client.fetch-registry=true
