--- a/P02-VehiclesAPI/vehicles-api/pom.xml
+++ b/P02-VehiclesAPI/vehicles-api/pom.xml
@@ -191,8 +191,69 @@
 
     </dependencies>
 
-    <build>
+<!--    <build>-->
 
+<!--        <plugins>-->
+
+<!--            <plugin>-->
+
+<!--                <groupId>org.springframework.boot</groupId>-->
+
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+
+<!--            </plugin>-->
+
+<!--            <plugin>-->
+
+<!--                <groupId>org.apache.cxf</groupId>-->
+
+<!--                <artifactId>cxf-codegen-plugin</artifactId>-->
+
+<!--                <version>3.3.2</version>-->
+
+<!--                <executions>-->
+
+<!--                    <execution>-->
+
+<!--                        <id>generate-sources</id>-->
+
+<!--                        <phase>generate-sources</phase>-->
+
+<!--                        <configuration>-->
+
+<!--                            <sourceRoot>${project.build.directory}/generated-sources/cxf-->
+
+<!--                            </sourceRoot>-->
+
+<!--                            <wsdlOptions>-->
+
+<!--                                <wsdlOption>-->
+
+<!--                                    <wsdl>${basedir}/src/main/resources/price.wsdl</wsdl>-->
+
+<!--                                </wsdlOption>-->
+
+<!--                            </wsdlOptions>-->
+
+<!--                        </configuration>-->
+
+<!--                        <goals>-->
+
+<!--                            <goal>wsdl2java</goal>-->
+
+<!--                        </goals>-->
+
+<!--                    </execution>-->
+
+<!--                </executions>-->
+
+<!--            </plugin>-->
+
+<!--        </plugins>-->
+
+<!--    </build>-->
+
+    <build>
         <plugins>
 
             <plugin>
@@ -209,7 +270,7 @@
 
                 <artifactId>cxf-codegen-plugin</artifactId>
 
-                <version>3.3.2</version>
+                <version>3.5.3</version>
 
                 <executions>
 
@@ -250,7 +311,6 @@
             </plugin>
 
         </plugins>
-
     </build>
 
 </project>
