--- a/P02-VehiclesAPI/pricing-service/pom.xml
+++ b/P02-VehiclesAPI/pricing-service/pom.xml
@@ -63,13 +63,14 @@
 
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 
         <groupId>org.springframework.cloud</groupId>
 
         <artifactId>spring-cloud-starter-config</artifactId>
+			<version>3.1.3</version>
 
-        </dependency>-->
+        </dependency>
 
 		<dependency>
 
@@ -134,6 +135,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -167,6 +174,9 @@
 				<groupId>org.springframework.boot</groupId>
 
 				<artifactId>spring-boot-maven-plugin</artifactId>
+
+				<version>${project.parent.version}</version>
+
 			</plugin>
 
 		</plugins>
