--- a/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -1,16 +1,15 @@
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:mem:pricedata
-
 # Eureka
 spring.application.name=pricing-service
 server.port=8762
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=false
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
+#eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+#eureka.instance.prefer-ip-address=false
 eureka.instance.hostname=localhost
 
-eureka.client.register-with-eureka=true
 
-eureka.client.fetch-registry=true
+spring.config.import=optional:configserver:
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:price
