--- a/P02-VehiclesAPI/boogle-maps/pom.xml
+++ b/P02-VehiclesAPI/boogle-maps/pom.xml
@@ -15,8 +15,8 @@
 	<description>A Maps mock</description>
 
 	<properties>
-		<java.version>17</java.version>
-		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+		<java.version>11</java.version>
+		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 
 	<dependencies>
